refactor: rename review-workflow to review-translation-workflow
Renamed instruction file and updated all references for improved clarity and consistency with translation-workflow naming pattern.

- Rename review-workflow.instructions.md → review-translation-workflow.instructions.md
- Update chatInstructions name in package.json
- Update references in NAB-XLF-Translator.agent.md, reviewXlfFiles.prompt.md, and CHANGELOG.md

--- a/extension/package.json
+++ b/extension/package.json
@@ -1490,8 +1490,8 @@
         "description": "Instructions for translating XLF files using a structured workflow with LLM assistance"
       },
       {
-        "name": "review-workflow",
-        "path": "./assets/instructions/review-workflow.instructions.md",
+        "name": "review-translation-workflow",
+        "path": "./assets/instructions/review-translation-workflow.instructions.md",
         "description": "Instructions for reviewing translations needing approval in XLF files using a structured workflow with LLM assistance"
       },
       {
