feat(mcp): add npm pre-release tag support
- Pass release type from publish workflow to CreateNpmPackage.ps1
- Tag npm packages as 'next' for pre-releases, 'latest' for releases
- Update MCP_SERVER.md with release channel documentation
- Add installation examples for both stable and pre-release versions

This ensures the npm package release state stays in sync with the VS Code
extension, allowing users to opt into pre-release versions with @next tag
while stable releases remain the default.

--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -84,7 +84,7 @@ jobs:
         id: packageVSIX
         run: |
           ../dev-tools/PowerShell/library/Publish-ToMarketPlace-Workflow.ps1 -releaseType ${{ env.RELEASE_TYPE }}
-          ../dev-tools/PowerShell/library/CreateNpmPackage.ps1
+          ../dev-tools/PowerShell/library/CreateNpmPackage.ps1 -ReleaseType ${{ env.RELEASE_TYPE }}
         shell: pwsh
         working-directory: ${{env.working-directory}}
 
