--- a/extension/package.json
+++ b/extension/package.json
@@ -1254,7 +1254,7 @@
                   },
                   "targetText": {
                     "type": "string",
-                    "description": "The translated text to be saved as the target content for the specified translation unit. This will replace any existing target text for the given unit."
+                    "description": "The translated text to be saved as the target content for the specified translation unit. This will replace any existing target text for the given unit. IMPORTANT: Because this is a JSON parameter, backslashes must be escaped by doubling them. For example, if the XLF source contains 'Line1\\\\Line2' (two backslashes), this parameter must contain 'Line1\\\\\\\\Line2' (four backslashes) so that after JSON parsing, the result will be two backslashes matching the source."
                   },
                   "targetState": {
                     "type": "string",
