--- a/.github/workflows/nerd-stuff.yml
+++ b/.github/workflows/nerd-stuff.yml
@@ -45,7 +45,7 @@ jobs:
           run: npm run test:coverage
           working-directory: ${{env.working-directory}}
       - name: Generate Report
-        run: npx nyc report --reporter=lcov --check-coverage=false
+        run: npx c8 report --reporter=lcov --check-coverage=false
         working-directory: ${{env.working-directory}}
       - name: Upload Report
         uses: actions/upload-artifact@v4
@@ -54,5 +54,5 @@ jobs:
           path: ${{env.working-directory}}.coverage/**
           retention-days: 7
       - name: Code Coverage
-        run: npx nyc report --reporter=lcov --reporter=text-summary --check-coverage
+        run: npx c8 report --reporter=lcov --reporter=text-summary --check-coverage
         working-directory: ${{env.working-directory}}
