--- a/extension/package.json
+++ b/extension/package.json
@@ -1535,8 +1535,8 @@
     "lint:fix": "prettier --write . && eslint src --fix",
     "test": "node ./out/test/runTest.js",
     "pretest:coverage": "npm run test-compile && npm run lint",
-    "test:coverage": "node ./out/test/runTest-coverage.js",
-    "coverage:report": "npx nyc report --reporter=lcov --reporter=text-summary --check-coverage"
+    "test:coverage": "c8 --temp-directory=coverage/tmp node ./out/test/runTest.js",
+    "coverage:report": "c8 report --reporter=lcov --reporter=text-summary --check-coverage"
   },
   "dependencies": {
     "@modelcontextprotocol/sdk": "^1.25.2",
@@ -1560,7 +1560,6 @@
     "zod": "^3.25.74"
   },
   "devDependencies": {
-    "@istanbuljs/nyc-config-typescript": "^1.0.1",
     "@types/adm-zip": "^0.4.34",
     "@types/format-duration": "^1.0.1",
     "@types/glob": "^8.1.0",
@@ -1579,6 +1578,7 @@
     "@typescript-eslint/eslint-plugin": "^8.19.1",
     "@typescript-eslint/parser": "^8.19.1",
     "@vscode/test-electron": "^2.1.3",
+    "c8": "^10.1.3",
     "eslint": "^9.17.0",
     "eslint-config-prettier": "8.3.0",
     "eslint-plugin-prettier": "3.4.0",
@@ -1586,7 +1586,6 @@
     "globals": "^16.5.0",
     "madge": "^4.0.2",
     "mocha": "^11.1.0",
-    "nyc": "^15.1.0",
     "prettier": "2.2.1",
     "ts-loader": "^9.1.2",
     "ts-node": "^10.4.0",
