--- a/.github/workflows/nerd-stuff.yml
+++ b/.github/workflows/nerd-stuff.yml
@@ -44,15 +44,12 @@ jobs:
         with:
           run: npm run test:coverage
           working-directory: ${{env.working-directory}}
-      - name: Generate Report
-        run: npx c8 report --reporter=lcov --check-coverage=false
-        working-directory: ${{env.working-directory}}
       - name: Upload Report
         uses: actions/upload-artifact@v4
         with:
           name: code-coverage
           path: ${{env.working-directory}}.coverage/**
           retention-days: 7
-      - name: Code Coverage
-        run: npx c8 report --reporter=lcov --reporter=text-summary --check-coverage
+      - name: Code Coverage Summary
+        run: npm run coverage:report
         working-directory: ${{env.working-directory}}
