--- a/.github/workflows/nerd-stuff.yml
+++ b/.github/workflows/nerd-stuff.yml
@@ -53,3 +53,4 @@ jobs:
           name: code-coverage
           path: ${{env.working-directory}}/.coverage/**
           retention-days: 7
+          include-hidden-files: true
