fix: update temp directory path in coverage configuration and improve test coverage commands

--- a/extension/.c8rc.json
+++ b/extension/.c8rc.json
@@ -19,7 +19,7 @@
     "**/dist/**"
   ],
   "exclude-after-remap": true,
-  "temp-directory": "coverage/tmp",
+  "temp-directory": ".coverage/tmp",
   "reporter": [
     "text",
     "lcov",
