fix: update coverage report generation and upload steps in CI workflow

--- a/.github/workflows/nerd-stuff.yml
+++ b/.github/workflows/nerd-stuff.yml
@@ -44,13 +44,19 @@ jobs:
         with:
           run: npm run test:coverage
           working-directory: ${{env.working-directory}}
-      - name: Code Coverage Summary
-        run: npm run coverage:report
+      - name: Generate Coverage Report
+        if: always()
+        run: c8 report --reporter=lcov --reporter=text-summary
         working-directory: ${{env.working-directory}}
       - name: Upload Report
+        if: always()
         uses: actions/upload-artifact@v4
         with:
           name: code-coverage
           path: ${{env.working-directory}}/.coverage/**
           retention-days: 7
           include-hidden-files: true
+      - name: Check Coverage Thresholds
+        if: always()
+        run: npm run coverage:report
+        working-directory: ${{env.working-directory}}
