feat: add xlf translation technical rules instructions file to chat prompts

--- a/extension/package.json
+++ b/extension/package.json
@@ -1490,6 +1490,9 @@
       },
       {
         "path": "./assets/instructions/glossary-management.instructions.md"
+      },
+      {
+        "path": "./assets/instructions/xlf-translation-technical-rules.instructions.md"
       }
     ],
     "chatPromptFiles": [
