fix: ensure hidden files are included in code coverage report uploads

--- a/.github/workflows/nerd-stuff.yml
+++ b/.github/workflows/nerd-stuff.yml
@@ -48,8 +48,10 @@ jobs:
         run: npm run coverage:report
         working-directory: ${{env.working-directory}}
       - name: Upload Report
+        if: always()
         uses: actions/upload-artifact@v4
         with:
           name: code-coverage
           path: ${{env.working-directory}}/.coverage/**
           retention-days: 7
+          include-hidden-files: true
