--- a/.github/workflows/nerd-stuff.yml
+++ b/.github/workflows/nerd-stuff.yml
@@ -42,7 +42,7 @@ jobs:
       - name: Run Tests
         uses: GabrielBB/xvfb-action@v1
         with:
-          run: npm run test:coverage
+          run: npm test
           working-directory: ${{env.working-directory}}
       - name: Code Coverage Summary
         run: npm run coverage:report
