chore: update test command to disable coverage checks during test execution

--- a/extension/package.json
+++ b/extension/package.json
@@ -1536,7 +1536,7 @@
     "pretest": "npm run test-compile && npm run lint",
     "lint": "prettier --check . && eslint src",
     "lint:fix": "prettier --write . && eslint src --fix",
-    "test": "c8 --reporter=none --clean node ./out/test/runTest.js",
+    "test": "c8 --reporter=none --clean --no-check-coverage node ./out/test/runTest.js",
     "test:coverage:full": "cross-env GITHUB_ACTION=true c8 --reporter=none --clean node ./out/test/runTest.js",
     "coverage:report": "c8 report --reporter=lcov --reporter=text-summary --check-coverage"
   },
