--- a/.github/workflows/nerd-stuff.yml
+++ b/.github/workflows/nerd-stuff.yml
@@ -42,17 +42,17 @@ jobs:
       - name: Run Tests
         uses: GabrielBB/xvfb-action@v1
         with:
-          run: npm run test:coverage
+          run: npm test
           working-directory: ${{env.working-directory}}
-      - name: Generate Report
-        run: npx nyc report --reporter=lcov --check-coverage=false
+      - name: Code Coverage Summary
+        if: always()
+        run: npm run coverage:report
         working-directory: ${{env.working-directory}}
       - name: Upload Report
+        if: always()
         uses: actions/upload-artifact@v4
         with:
           name: code-coverage
-          path: ${{env.working-directory}}.coverage/**
+          path: ${{env.working-directory}}/.coverage/reports/**
           retention-days: 7
-      - name: Code Coverage
-        run: npx nyc report --reporter=lcov --reporter=text-summary --check-coverage
-        working-directory: ${{env.working-directory}}
+          include-hidden-files: true
