test(workflows): Add GITHUB_ACTION environment variable to workflows for consistency

--- a/.github/workflows/nerd-stuff.yml
+++ b/.github/workflows/nerd-stuff.yml
@@ -15,6 +15,7 @@ jobs:
     env:
       working-directory: ./extension/
       NAB_DISABLE_TELEMETRY: true
+      GITHUB_ACTION: true
     steps:
       - name: Checkout
         uses: actions/checkout@v2
