test: Refactor tests and enhance agent logging (#580)
Improvements include refactoring tests to use unique temporary paths,
enhancing documentation tests with cleanup logic, updating coverage
commands for better reporting, and adding a self-reflection protocol for
the agent to log errors and suggest improvements.

--- a/.github/workflows/nerd-stuff.yml
+++ b/.github/workflows/nerd-stuff.yml
@@ -5,6 +5,7 @@ on:
     branches: [main]
   pull_request:
     branches: [main]
+  workflow_dispatch:
 
 jobs:
   report:
@@ -15,6 +16,7 @@ jobs:
     env:
       working-directory: ./extension/
       NAB_DISABLE_TELEMETRY: true
+      GITHUB_ACTION: true
     steps:
       - name: Checkout
         uses: actions/checkout@v2
